<resources>
    <string name="app_name">To Do List</string>
    <string name="add">Add</string>
    <string name="title_list">Title</string>
    <string name="additional_note">Additional Note</string>
    <string name="due_date">Due Date</string>
    <string name="add_title">Add a Task</string>
    <string name="save">Save</string>
    <string name="update_title">Update a Task</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="task_finished">Task finished?</string>
    <string name="date_not_set">Date not set</string>
    <string name="time_not_set">Time not set (all day)</string>
    <string name="due_time">Due Time</string>
    <string name="comma">,\u0020</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="created_date">Created date:\u0020</string>
    <string name="created_date_content">Created date content</string>
    <string name="due_time_content">Due time content</string>
    <string name="due_time_u0020">Due time:\u0020</string>
    <string name="additional_note_u0020">Additional note:\u0020</string>
</resources>
