<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/title"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_list"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/title_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect"
            android:hint="@string/title_list"/>

        <TextView
            android:id="@+id/due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/due_date_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>

        <TextView
            android:id="@+id/list_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_note"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect"
            android:hint="@string/additional_note" />
    </LinearLayout>
</RelativeLayout>